# gol

./: CMakeLists.txt  Makefile.old  features.h.in  tags
res/: resource.rc
src/: gol.h  main.c  video.c  video.h
src/gui/: gui.h  gui_win32.c  win32_mainwindow.c  win32_mainwindow.h
